page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -92,7 +92,7 @@
 			     this.id = this.id.replace(/[^a-z0-9-_]+/gi, "");
 			 });
 			 
-			 console.log(kudos);
+			 // console.log(kudos);
 			 $("#"+kudos).html(response);
 	     });
 	  </script>		 
