--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -82,17 +82,9 @@
 
 	     $.ajax(settings).done(function (response) {
 			 console.log(response);
-			 var kudos = "kudos-"+url.replace(/[^a-z0-9-_]+/gi, "");
+			 var kudos = "kudos-"+"{{ $page.LinkTitle }}";			 
 			 
-			 //Find all IDs starting with kudos
-			 $("[id^='kudos']").filter(function() {
-			     //Set data from the ID (URL)
-			     $(this).data("ele-path", this.id);
-			     //Change the id removing all spl chars.
-			     this.id = this.id.replace(/[^a-z0-9-_]+/gi, "");
-			 });
-			 
-			 // console.log(kudos);
+			 console.log(kudos);
 			 $("#"+kudos).html(response);
 	     });
 	  </script>		 
