--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -85,7 +85,7 @@
 			 var kudos = "kudos-"+"{{ $page.LinkTitle }}";			 
 			 
 			 console.log(kudos);
-			 $("[id=kudos]").html(response);
+			 $("span[id=kudos]").html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
