page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -88,7 +88,7 @@
 			             if (clapCount && clapCount.response > 0) {
 			                 elem.css("display", "initial")
 			                     .find(".count")
-			                     .html(clapCount.claps);
+			                     .html(clapCount.response);
 			             }
 			         });
 	     });
