--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -70,28 +70,55 @@
      });
   </script> -->
 	  <script>
-		 var url = "{{ $page.Permalink }}";
-		 // console.log(url);
-	     var settings = {
-	       "url": "https://api.applause-button.com/get-claps?url="+url,
-		   "method": "GET",
-		   "timeout": 0
-	     }
-		 
-		 // console.log(settings.url);
-
-	     $.ajax(settings).done(function (response) {
-			 jQuery(".kudos").each(function() {
-			             var elem = jQuery(this),
-			                 url = elem.attr("data-url").replace(/^https?:\/\//, "");
-			             var clapCount = response.find(function(c) { return c.url === url; });
-			             if (clapCount && clapCount.response > 0) {
-			                 elem.css("display", "initial")
-			                     .find(".count")
-			                     .html(clapCount.response);
-			             }
-			         });
+		 // var url = "{{ $page.Permalink }}";
+		 // // console.log(url);
+		 // 	     var settings = {
+		 // 	       "url": "https://api.applause-button.com/get-claps?url="+url,
+		 //   "method": "GET",
+		 //   "timeout": 0
+		 // 	     }
+		 //
+		 // // console.log(settings.url);
+		 //
+		 // 	     $.ajax(settings).done(function (response) {
+		 // 			 jQuery(".kudos").each(function() {
+		 // 			             var elem = jQuery(this),
+		 // 			                 url = elem.attr("data-url").replace(/^https?:\/\//, "");
+		 // 			             var clapCount = response.find(function(c) { return c.url === url; });
+		 // 			             if (clapCount && clapCount.response > 0) {
+		 // 			                 elem.css("display", "initial")
+		 // 			                     .find(".count")
+		 // 			                     .html(clapCount.response);
+		 // 			             }
+		 // 			         });
+		 // 	     });
+	 // the clap counts for each article are displayed via span elements with the 'clap' class, find all these
+	     var elements = jQuery(".clap").toArray();
+	    // the article that each clap represents is indicates by the data-url attribute
+	     var urls = elements.map(function(el) {
+	         return el.getAttribute("data-url");
 	     });
+	     // send an API request that asks for the clap count of all of these articles
+	     jQuery.ajax({
+	         url: "https://api.applause-button.com/get-multiple",
+	         method: "POST",
+	         data: JSON.stringify(urls),
+	         headers: {
+	             "Content-Type": "text/plain"
+	         },
+	         contentType: "text/plain"
+	     }).done(function(claps) {
+	        // when the response returns, locate each element and update the count
+	         jQuery(".clap").each(function() {
+	             var elem = jQuery(this),
+	                 url = elem.attr("data-url").replace(/^https?:\/\//, "");
+	             var clapCount = claps.find(function(c) { return c.url === url; });
+	             if (clapCount && clapCount.claps > 0) {
+	                 elem.css("display", "initial")
+	                     .find(".count")
+	                     .html(clapCount.claps);
+	             }
+	         });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
 		       <g class="flat">
