page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -98,7 +98,7 @@
 	     var urls = elements.map(function(el) {
 	         return el.getAttribute("data-url");
 	     });
-		 console.log(urls);
+		 console.log(elements);
 	     // send an API request that asks for the clap count of all of these articles
 	     jQuery.ajax({
 	         url: "https://api.applause-button.com/get-multiple",
