page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -92,13 +92,13 @@
 		 // 			             }
 		 // 			         });
 		 // 	     });
-	 // the clap counts for each article are displayed via span elements with the 'clap' class, find all these
+	 // the clap counts for each article are displayed via span elements with the 'kudos' class, find all these
 	     var elements = jQuery(".kudos").toArray();
+ 		 console.log(elements);
 	    // the article that each clap represents is indicates by the data-url attribute
 	     var urls = elements.map(function(el) {
 	         return el.getAttribute("data-url");
 	     });
-		 console.log(elements);
 	     // send an API request that asks for the clap count of all of these articles
 	     jQuery.ajax({
 	         url: "https://api.applause-button.com/get-multiple",
