page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -123,6 +123,7 @@
 		         });
 		     });
 		 }
+		 loadClapsCount();
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
 		       <g class="flat">
