page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -96,6 +96,7 @@
 		 function loadClapCount() {
 		     // the clap counts for each article are displayed via span elements with the 'clap' class, find all these
 		     var elements = jQuery(".clap").toArray();
+			 consolde.log(elements);
 		    // the article that each clap represents is indicates by the data-url attribute
 		     var urls = elements.map(function(el) {
 		         return el.getAttribute("data-url");
