page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -95,7 +95,7 @@
 	 // the clap counts for each article are displayed via span elements with the 'kudos' class, find all these
 		 function loadClapCount() {
 		     // the clap counts for each article are displayed via span elements with the 'clap' class, find all these
-		     var elements = jQuery(".clap").toArray();
+		     var elements = jQuery(".kudos").toArray();
 			 console.log(elements);
 		    // the article that each clap represents is indicates by the data-url attribute
 		     var urls = elements.map(function(el) {
