--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -26,6 +26,64 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+  <script>
+	 // var url = "{{ $page.Permalink }}";
+	 // // console.log(url);
+	 // 	     var settings = {
+	 // 	       "url": "https://api.applause-button.com/get-claps?url="+url,
+	 //   "method": "GET",
+	 //   "timeout": 0
+	 // 	     }
+	 //
+	 // // console.log(settings.url);
+	 //
+	 // 	     $.ajax(settings).done(function (response) {
+	 // 			 jQuery(".kudos").each(function() {
+	 // 			             var elem = jQuery(this),
+	 // 			                 url = elem.attr("data-url").replace(/^https?:\/\//, "");
+	 // 			             var clapCount = response.find(function(c) { return c.url === url; });
+	 // 			             if (clapCount && clapCount.response > 0) {
+	 // 			                 elem.css("display", "initial")
+	 // 			                     .find(".count")
+	 // 			                     .html(clapCount.response);
+	 // 			             }
+	 // 			         });
+	 // 	     });
+ // the clap counts for each article are displayed via span elements with the 'kudos' class, find all these
+	 function loadClapCount() {
+	     // the clap counts for each article are displayed via span elements with the 'clap' class, find all these
+	     var elements = jQuery(".kudos").toArray();
+	    // the article that each clap represents is indicates by the data-url attribute
+	     var urls = elements.map(function(el) {
+	         return el.getAttribute("data-url");
+	     });
+		 console.log(urls);
+	     // send an API request that asks for the clap count of all of these articles
+	     jQuery.ajax({
+	         url: "https://api.applause-button.com/get-multiple",
+	         method: "POST",
+	         data: JSON.stringify(urls),
+	         headers: {
+	             "Content-Type": "text/plain"
+	         },
+	         contentType: "text/plain"
+	     }).done(function(claps) {
+	        // when the response returns, locate each element and update the count
+	         jQuery(".kudos").each(function() {
+	             var elem = jQuery(this),
+	                 url = elem.attr("data-url").replace(/^https?:\/\//, "");
+	             var clapCount = claps.find(function(c) { return c.url === url; });
+	             if (clapCount && clapCount.claps > 0) {
+	                 elem.css("display", "initial")
+	                     .find(".count")
+	                     .html(clapCount.claps);
+	             }
+	         });
+	     });
+	 }
+	 loadClapCount();
+  </script>
+
 <!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
