--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -107,7 +107,6 @@
 				     var urls = elements.map(function(el) {
 				         return el.getAttribute("data-url");
 				     });
- 					 console.log(urls);
 				     // send an API request that asks for the clap count of all of these articles
 				     jQuery.ajax({
 				         url: "https://api.applause-button.com/get-multiple",
@@ -119,6 +118,7 @@
 				         contentType: "text/plain"
 				     }).done(function(claps) {
 				        // when the response returns, locate each element and update the count
+						 console.log(claps);
 				         jQuery(".kudos").each(function() {
 				             var elem = jQuery(this),
 				                 url = elem.attr("data-url").replace(/^https?:\/\//, "");
