--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -121,8 +121,8 @@
 				         jQuery(".kudos").each(function() {
 				             var elem = jQuery(this),
 				                 url = elem.attr("data-url").replace(/^https?:\/\//, "");
-									 console.log(url);
 				             var kudosCount = kudos.find(function(c) { return c.url === url; });
+							 console.log(kudosCount);
 				             if (kudosCount && kudosCount.kudos > 0) {
 				                 elem.css("display", "initial")
 				                     .find(".count")
