--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -128,6 +128,10 @@
 				                 elem.css("display", "initial")
 				                     .find(".count")
 				                     .html(clapCount.claps);
+				             } else {
+			                 elem.css("display", "initial")
+			                     .find(".count")
+			                     .html(0);
 				             }
 				         });
 				     });
