--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -36,7 +36,7 @@ body {
 .reveal blockquote {
 background: rgba(255, 255, 255, 0.05);
 box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); 
-border: $black; }
+border: #000000; }
   
 .reveal pre {
   font-family: "Inconsolata", monospace; }
