--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -34,7 +34,7 @@ body {
  * OTHER
  *********************************************/
 .reveal blockquote {
-background: rgba(255, 255, 255, 0.05);
+background: #fff555;
 box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); 
 border: #000000; }
   
