--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -34,9 +34,7 @@ body {
  * OTHER
  *********************************************/
 .reveal blockquote {
-background: #BBCCEE;
-box-shadow: 0px 0px 2px rgba(42, 84, 169, 0.5); 
-border: #000000; }
+background: #BBCCEE; }
   
 .reveal pre {
   font-family: "Inconsolata", monospace; }
