--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -34,7 +34,8 @@ body {
  * OTHER
  *********************************************/
 .reveal blockquote {
-background: #BBCCEE; }
+background: #BBCCEE; 
+box-shadow: 0px 0px 2px rgba(42, 84, 169, 0.2); }
   
 .reveal pre {
   font-family: "Inconsolata", monospace; }
