--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -23,6 +23,44 @@
 </script> -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script>
+ // the clap counts for each article are displayed via span elements with the 'kudos' class, find all these
+	 function loadClapCount() {
+	     // the clap counts for each article are displayed via span elements with the 'clap' class, find all these
+	     var elements = jQuery(".clap").toArray();
+	    // the article that each clap represents is indicates by the data-url attribute
+	     var urls = elements.map(function(el) {
+	         return el.getAttribute("data-url");
+	     });
+	     // send an API request that asks for the clap count of all of these articles
+	     jQuery.ajax({
+	         url: "https://api.applause-button.com/get-multiple",
+	         method: "POST",
+	         data: JSON.stringify(urls),
+	         headers: {
+	             "Content-Type": "text/plain"
+	         },
+	         contentType: "text/plain"
+	     }).done(function(claps) {
+	        // when the response returns, locate each element and update the count
+	         jQuery(".clap").each(function() {
+	             var elem = jQuery(this),
+	                 url = elem.attr("data-url").replace(/^https?:\/\//, "");
+	             var clapCount = claps.find(function(c) { return c.url === url; });
+	             if (clapCount && clapCount.claps > 0) {
+	                 elem.css("display", "initial")
+	                     .find(".count")
+	                     .html(clapCount.claps);
+	             } else {
+                 elem.css("display", "initial")
+                     .find(".count")
+                     .html(0);
+	             }
+	         });
+	     });
+	 }
+	 loadClapCount();
+  </script>
 
 <!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
