portfolio_EBAU.html

--- a/layouts/partials/widgets/portfolio_EBAU.html
+++ b/layouts/partials/widgets/portfolio_EBAU.html
@@ -14,6 +14,7 @@
 
     {{ with $st.Title }}<h1>{{ . | markdownify | emojify }}</h1>{{ end }}
     {{ with $st.Params.subtitle }}<p>{{ . | markdownify | emojify }}</p>{{ end }}
+	<i class="fab fa-google-drive"></i>
 
   </div>
   <div class="col-12 col-lg-8">
