--- a/layouts/partials/widgets/portfolio_EBAU.html
+++ b/layouts/partials/widgets/portfolio_EBAU.html
@@ -13,7 +13,7 @@
   <div class="col-12 col-lg-4 section-heading">
 
     {{ with $st.Title }}<h1>{{ . | markdownify | emojify }}</h1>{{ end }}
-    {{ with $st.Params.subtitle }}<p>{{ . | markdownify | emojify }} <i class="fab fa-google-drive"></i></p>{{ end }}	
+    {{ with $st.Params.subtitle }}<p>{{ . | markdownify | emojify }} <a href="https://drive.google.com/drive/u/0/folders/0B6t6-aLmKtoLaEZ1Q2UzVXpxUlk"><i class="fab fa-google-drive"></i></a></p>{{ end }}	
 
   </div>
   <div class="col-12 col-lg-8">
