--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,7 +21,7 @@ body {
   color: #111111;
   background-color: #fffff8; }
   
-p {
+#examenes-fisica p {
 	font-family: "Cabin Sketch", sans-serif;
 	color: $primary_complementary; }  
   
