--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -24,6 +24,9 @@ body {
 #examenes-fisica p {
 	font-family: "Cabin Sketch", sans-serif;
 	color: $primary_complementary; }  
+#examenes-quimica p {
+	font-family: "Cabin Sketch", sans-serif;
+	color: $primary_complementary; }  	
   
 /* Navigation bar text */
 .navbar-light {
