--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -393,6 +393,8 @@ border-color: $primary; }
   
 .btn-primary {
 	color: $example_fg;
+	background-color: transparent;
+	border-color: $example_fg;
 }
   
 /*************************************************
