--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -392,10 +392,24 @@ border-color: $primary; }
   box-shadow: 0 0 0 0.2rem rgba(42, 84, 169, 0.5); }
   
 .btn-primary {
-	color: $example_fg;
-	background-color: transparent;
-	border-color: $example_fg;
-}
+color: $example_fg;
+background-color: transparent;
+border-color: $example_fg; }
+.btn-primary:hover {
+color: #FFFFF8;
+background-color: $example_fg;
+border-color: $example_fg; }
+.btn-light:focus, .btn-light.focus {
+box-shadow: 0 0 0 0.2rem rgba(42, 84, 169, 0.5); }
+.btn-light.disabled, .btn-light:disabled {
+color: $primary;
+background-color: transparent; }
+.btn-light:not(:disabled):not(.disabled):active, .btn-light:not(:disabled):not(.disabled).active, .show > .btn-light.dropdown-toggle {
+color: #FFFFF8;
+background-color: $primary;
+border-color: $primary; }
+.btn-light:not(:disabled):not(.disabled):active:focus, .btn-light:not(:disabled):not(.disabled).active:focus, .show > .btn-light.dropdown-toggle:focus {
+box-shadow: 0 0 0 0.2rem rgba(42, 84, 169, 0.5); }
   
 /*************************************************
 *  Forms
