--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -399,17 +399,17 @@ border-color: $example_fg; }
 color: #FFFFF8;
 background-color: $example_fg;
 border-color: $example_fg; }
-.btn-light:focus, .btn-light.focus {
-box-shadow: 0 0 0 0.2rem rgba(42, 84, 169, 0.5); }
-.btn-light.disabled, .btn-light:disabled {
-color: $primary;
+.btn-primary:focus, .btn-primary.focus {
+box-shadow: 0 0 0 0.2rem rgba(76, 95, 38, 0.5); }
+.btn-primary.disabled, .btn-primary:disabled {
+color: $example_fg;
 background-color: transparent; }
-.btn-light:not(:disabled):not(.disabled):active, .btn-light:not(:disabled):not(.disabled).active, .show > .btn-light.dropdown-toggle {
+.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
 color: #FFFFF8;
-background-color: $primary;
-border-color: $primary; }
-.btn-light:not(:disabled):not(.disabled):active:focus, .btn-light:not(:disabled):not(.disabled).active:focus, .show > .btn-light.dropdown-toggle:focus {
-box-shadow: 0 0 0 0.2rem rgba(42, 84, 169, 0.5); }
+background-color: $example_fg;
+border-color: $example_fg; }
+.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
+box-shadow: 0 0 0 0.2rem rgba(76, 95, 38, 0.5); }
   
 /*************************************************
 *  Forms
