--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -172,7 +172,7 @@ div.alert-gdrive > div:first-child::before {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
   color: $example_fg;
-  content: '\f0eb';
+  content: '\f3aa';
 }
 
 .alert-gdrive {
