--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -169,7 +169,7 @@ div.alert-example > div:first-child::before {
 }
 
 div.alert-gdrive > div:first-child::before {
-  font-family: 'Font Awesome 5 Free';
+  font-family: 'Font Awesome 5 Brands';
   font-weight: 900;
   color: $example_fg;
   content: '\f3aa';
