--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -171,7 +171,7 @@ div.alert-example > div:first-child::before {
 div.alert-gdrive > div:first-child::before {
   font-family: 'Font Awesome 5 Brands';
   font-weight: 900;
-  color: $example_fg;
+  color: #111111;
   content: '\f3aa';
 }
 
