--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -177,8 +177,8 @@ div.alert-gdrive > div:first-child::before {
 
 .alert-gdrive {
   color: #111111;
-  background-color: $example_bg;
-  border-color: $example_fg;
+  background-color: #dddddd;
+  border-color: #111111;
 }
 
 /*************************************************
