--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -178,7 +178,7 @@ div.alert-gdrive > div:first-child::before {
 .alert-gdrive {
   color: #111111;
   background-color: $primary_complementary_bg;
-  border-color: $primary_complementary; }
+  border-color: $primary_complementary;
 }
 
 /*************************************************
