--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -177,8 +177,8 @@ div.alert-gdrive > div:first-child::before {
 
 .alert-gdrive {
   color: #111111;
-  background-color: $primary_complementary_bg;
-  border-color: $primary_complementary;
+  background-color: $primary_bg;
+  border-color: $primary;
 }
 
 /*************************************************
