--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -175,11 +175,11 @@ div.alert-gdrive > div:first-child::before {
   content: '\f3aa';
 }
 
-.alert-gdrive {
-  color: #111111;
-  background-color: $primary_bg;
-  border-color: $primary;
-}
+//.alert-gdrive {
+//  color: #111111;
+//  background-color: $primary_bg;
+//  border-color: $primary;
+//}
 
 /*************************************************
  *  Card component
