--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -25,6 +25,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js"></script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 
 <!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
