site_footer.html

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -26,7 +26,7 @@
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">tema Academic</a> para
     <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
 	
-	Alojado por [Netlify](https://www.netlify.com).
+	Alojado por <a href="https://www.netlify.com" target="_blank" rel="noopener">Netlify</a>.
 
     {{ if not (in (slice "docs" "updates") .Type) }}
     <span class="float-right" aria-hidden="true">
