site_footer.html

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -24,8 +24,10 @@
   <p class="powered-by">
     Funcionando con el
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">tema Academic</a> para
-    <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
+    <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.	
+	</p>
 	
+  <p class="powered-by">
 	Alojado por <a href="https://www.netlify.com" target="_blank" rel="noopener">Netlify</a>.
 
     {{ if not (in (slice "docs" "updates") .Type) }}
