--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -80,7 +80,10 @@ color: #555555; }
   
 site-footer,
 footer a.back-to-top i {
-color: rgba(42, 84, 169, 0.54); }	    
+color: rgba(42, 84, 169, 0.54); }
+
+.powered-by svg {
+  vertical-align: baseline; }
 
 /**************************************************
  *  Tags/Labels
@@ -236,7 +239,7 @@ color: $primary_complementary; }
 
 .article-metadata svg {
   fill: $primary_complementary; 
-	vertical-align: baseline; }
+  vertical-align: baseline; }
 
 .article-metadata a,
 .article-metadata a:hover {
