--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -82,8 +82,8 @@ site-footer,
 footer a.back-to-top i {
 color: rgba(42, 84, 169, 0.54); }
 
-.powered-by svg {
-  vertical-align: baseline; }
+//.powered-by svg {
+//  vertical-align: baseline; }
 
 /**************************************************
  *  Tags/Labels
