--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -35,7 +35,7 @@
   </p>
 	
   <p class="powered-by">
-	Alojado por <a href="https://www.netlify.com" target="_blank" rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="0.75rem">
+	Alojado por <a href="https://www.netlify.com" target="_blank" rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="147" height="0.75rem">
     <radialGradient id="a" cy="0%" r="100.11%" gradientTransform="matrix(0 .9989 -1.152 0 .5 -.5)">
         <stop offset="0" stop-color="#20c6b7"/>
         <stop offset="1" stop-color="#4d9abf"/>
