site_footer.html

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -35,7 +35,7 @@
   </p>
 	
   <p class="powered-by">
-	Alojado por <a href="https://www.netlify.com" target="_blank" rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40">
+	Alojado por <a href="https://www.netlify.com" target="_blank" rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" width="0.75rem" height="0.75rem">
   <defs>
     <radialGradient id="a" cy="0%" r="100.11%" fx="50%" fy="0%" gradientTransform="matrix(0 .9989 -1.152 0 .5 -.5)">
       <stop offset="0%" stop-color="#20C6B7"/>
