--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -82,8 +82,15 @@ site-footer,
 footer a.back-to-top i {
 color: rgba(42, 84, 169, 0.54); }
 
-//.powered-by svg {
-//  vertical-align: baseline; }
+.powered-by svg {
+	display: inline-flex;
+	align-self: center;
+	height:0.9em;
+	width:0.9em;
+	bottom: 0.1em;
+	line-height: 1;
+	position: relative;
+  }	
 
 /**************************************************
  *  Tags/Labels
