--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -19,7 +19,15 @@ html {
 
 body {
   color: #111111;
-  background-color: #fffff8; }    	
+  background-color: #fffff8; }
+  
+p svg {
+	display: inline-flex;
+	align-self: center;
+	bottom: 0.1em;
+	line-height: 1;
+	position: relative;
+}  
   
 /* Navigation bar text */
 .navbar-light {
