--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,13 +21,13 @@ body {
   color: #111111;
   background-color: #fffff8; }
   
-//p svg {
-//	display: inline-flex;
-//	align-self: center;
-//	bottom: 0.1em;
-//	line-height: 1;
-//	position: relative;
-//}
+p svg {
+	display: inline-flex;
+	align-self: center;
+	bottom: 0.1em;
+	line-height: 1;
+	position: relative;
+}  
   
 /* Navigation bar text */
 .navbar-light {
