--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -202,7 +202,7 @@ div.alert-gdrive > div:first-child::before {
  **************************************************/
 
 .card {
-  background: #ffffff; }
+  background: $primary; }
 
 .card .card-text p {
   color: #555555; }
