--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -3,9 +3,9 @@
 /**************************************************
  *  Definiciones de colores basadas en $primary
  **************************************************/
-$primary_bg: #BBCCEE; // color complementario de primary
-$primary_complementary: #b50000; // color complementario de primary
-$primary_complementary_bg: #ffcccc; // color complementario de primary
+$primary_bg: #BBCCEE;
+$primary_complementary: #b50000;
+$primary_complementary_bg: #ffcccc;
 $example_fg: #4c5f26;
 $example_bg: #CCDDAA;
 
