--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -307,7 +307,7 @@ color: $primary; }
  *  Featurette Widget
  **************************************************/
 
-.featurette-icon span:hover {
+.featurette-icon li:hover {
   transform: scale(1.2); }
 
 /*************************************************
