--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -308,7 +308,7 @@ color: $primary; }
  **************************************************/
 
 .featurette-icon span {
-	  display: inline-block; 
+	  display: inline-block; }
 .featurette-icon span:hover {
   transform: scale(1.2); }
 
