--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -141,7 +141,7 @@ border-top: 2px solid #111111; }
 /* Table Striped */
 table > tbody > tr:nth-child(odd) > td,
 table > tbody > tr:nth-child(odd) > th {
-background-color: #dddddd; }
+background-color: $primary_bg; }
 
 /* Table Hover */
 table > tbody > tr:hover > td,
