--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -125,18 +125,18 @@ table > tfoot > tr > th,
 table > thead > tr > td,
 table > tbody > tr > td,
 table > tfoot > tr > td {
-border-top: 0px solid #111111; }
+border-top: 0px solid $primary; }
 
 // Bordes estilo booktabs
 table > thead {
-  border-top: 2px solid #111111; }
+  border-top: 2px solid $primary; }
 table > thead > tr > th {
-border-bottom: 1px solid #111111; }
+border-bottom: 1px solid $primary; }
 table > tbody {
-border-bottom: 2px solid #111111; }
+border-bottom: 2px solid $primary; }
 
 table > tbody + tbody {
-border-top: 2px solid #111111; }
+border-top: 2px solid $primary; }
 
 /* Table Striped */
 table > tbody > tr:nth-child(odd) > td,
