--- a/layouts/partials/_default/baseof.html
+++ b/layouts/partials/_default/baseof.html
@@ -22,13 +22,15 @@
 
   {{ partial "citation" . }}
   
-  <script
+  <!-- <script
     src="https://unpkg.com/littlefoot/dist/littlefoot.js"
     type="application/javascript"
   ></script>
   <script type="application/javascript">
     littlefoot.default()
-  </script>
+  </script> -->
+	  
+	  HOLA
 
 </body>
 </html>
