custom_head.html

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -28,7 +28,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js"></script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 
-<!-- <link
+<link
   rel="stylesheet"
   href="https://unpkg.com/littlefoot/dist/littlefoot.css"
-/> -->
+/>
