--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -695,3 +695,8 @@ applause-button {
     transform: translateY(0);
   }
 }
+
+/*************************************************
+*  littlefoot
+**************************************************/
+
