--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -700,8 +700,7 @@ applause-button {
 *  littlefoot
 **************************************************/
 
-.article-style aside p,
-div.alert > div {
+.littlefoot-footnote__host aside {
   position: relative;
   display: block;
   font-size: 1rem;
