--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -701,12 +701,7 @@ applause-button {
 **************************************************/
 
 .littlefoot-footnote__host aside {
-  position: relative;
-  display: block;
-  font-size: 1rem;
-  margin-left: 0;
-  margin-top: 0;
-  margin-bottom: 0; }
+  all: initial; }
 
 div.alert div > * {
   margin-bottom: .5rem;
