--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -704,8 +704,8 @@ applause-button {
 div.alert > div {
   all: initial; }
 
-div.alert div > * {
-  margin-bottom: .5rem;
+.littlefoot-footnote__host div > * {
+  all: initial;
   /* Use smaller paragraph spacing than usual. */ }
 
 div.alert div > :last-child {
