--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -708,21 +708,12 @@ div.alert > div {
   all: initial;
   /* Use smaller paragraph spacing than usual. */ }
 
-div.alert div > :last-child {
-  margin-bottom: 0; }
+.littlefoot-footnote__host div > :last-child {
+  all: initial; }
 
-.article-style aside p::before,
-div.alert > div:first-child::before {
-  position: absolute;
-  top: -0.5rem;
-  left: -2rem;
-  font-size: 1.5rem;
-  color: #209cee;
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  content: '\f05a';
-  width: 1.5rem;
-  text-align: center; }
+.littlefoot-footnote__host aside p::before,
+.littlefoot-footnote__host > div:first-child::before {
+  all: initial; }
 
 div.alert-warning > div:first-child::before {
   font-family: 'Font Awesome 5 Free';
