--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -31,6 +31,10 @@
   <script type="application/javascript">
     littlefoot.default()
   </script> -->
+	  
+	<div class="bottom-panel" id="bottom-panel">
+	  <div class="popup-wrapper" id="popup-wrapper"></div> 
+	</div> 
 
 </body>
 </html>
