custom_head.html

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -32,3 +32,5 @@
   rel="stylesheet"
   href="https://unpkg.com/littlefoot/dist/littlefoot.css"
 /> -->
+
+<link rel="stylesheet" href="css/main.css">
