--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -34,7 +34,8 @@
 	  
 	<div class="bottom-panel" id="bottom-panel">
 	  <div class="popup-wrapper" id="popup-wrapper"></div> 
-	</div> 
+	</div>
+	<script src="./footnotes.js"></script> 
 
 </body>
 </html>
