--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,9 +13,9 @@
 
   {{ block "main" . }}{{ end }}
   
-	<div class="bottom-panel" id="bottom-panel">
-	  <div class="popup-wrapper" id="popup-wrapper"></div> 
-	</div>
+	<!-- <div class="bottom-panel" id="bottom-panel">
+	  <div class="popup-wrapper" id="popup-wrapper"></div>
+	</div> -->
 
   {{ partial "site_js" . }}
 
