--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,9 +13,9 @@
 
   {{ block "main" . }}{{ end }}
   
-	<div class="bottom-panel" id="bottom-panel">
+	<!-- <div class="bottom-panel" id="bottom-panel">
 	  <div class="popup-wrapper" id="popup-wrapper"></div>
-	</div>
+	</div> -->
 
   {{ partial "site_js" . }}
 
@@ -28,13 +28,13 @@
 
   {{ partial "citation" . }}
   
-  <!-- <script
+  <script
     src="https://unpkg.com/littlefoot/dist/littlefoot.js"
     type="application/javascript"
   ></script>
   <script type="application/javascript">
     littlefoot.default()
-  </script> -->	  
+  </script> 
 
 </body>
 </html>
