--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,13 +28,13 @@
 
   {{ partial "citation" . }}
   
-  <script
+  <!-- <script
     src="https://unpkg.com/littlefoot/dist/littlefoot.js"
     type="application/javascript"
   ></script>
   <script type="application/javascript">
     littlefoot.default()
-  </script> 
+  </script> --> 
 
 </body>
 </html>
