--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -724,6 +724,8 @@ applause-button {
   bottom: 0;
   left: 0;
   right: 0;
+  background-color: $primary;
+  color: #ffffff;
 }
 
 .popup-wrapper {
