--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -731,7 +731,7 @@ applause-button {
   display: none;
   max-width: 716.8px;
   margin: 0 auto;
-  background-color: white;
+  background-color: $primary;
   border-top: 3px solid black;
 }
 
