--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -732,6 +732,7 @@ applause-button {
   max-width: 716.8px;
   margin: 0 auto;
   background-color: $primary;
+  color: #ffffff;
 }
 
 #popup-index {
