--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -750,7 +750,7 @@ applause-button {
 }
 
 #popup-content {
-  max-width: 640px;
+  max-width: 100vw;
   text-align: left;
   padding: 1.25rem 0 1.25rem 0.9rem;
 }
