--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -732,7 +732,7 @@ applause-button {
   max-width: 100vw;
   margin: 0 auto;
   background-color: $primary;
-  color: #ffffff;
+  color: #fffff8;
 }
 
 #popup-index {
