--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -731,7 +731,7 @@ applause-button {
   display: none;
   max-width: 100vw;
   margin: 0 auto;
-  background-color: $primary;
+  background-color: $primary_bg;
   color: #fffff8;
 }
 
