--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -746,7 +746,7 @@ applause-button {
 }
 
 #popup-close:hover {
-  background-color: $primary;
+  background-color: $primary_bg;
 }
 
 #popup-content {
