--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -242,7 +242,7 @@ color: #000000; }
   color: #111111; }
   
 .article-header-caption {
-color: #fffff8; }
+color: #ffffff; }
 
 .article-header-caption a {
 color: #f7f056; }
