--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -107,7 +107,7 @@ color: rgba(42, 84, 169, 0.54); }
 
 .badge-light[href]:focus,
 .badge-light[href]:hover {
-  color: #fffff8;
+  color: #ffffff;
   background: $primary_complementary; }  
 
 .tag-cloud a:active,
