--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -65,7 +65,7 @@ background-image: linear-gradient(to bottom, $primary_complementary_bg, $primary
 **************************************************/
 
 .fancybox-caption {
-    color: #fffff8;
+    color: #ffffff;
 }
 
 .fancybox-caption a, .fancybox-caption a:link, .fancybox-caption a:visited {
