--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -149,7 +149,7 @@ background-color: $primary_bg; }
 /* Table Hover */
 table > tbody > tr:hover > td,
 table > tbody > tr:hover > th {
-color: #fffff8;
+color: #ffffff;
 background-color: $primary; }
 
 /*************************************************
