--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -144,7 +144,7 @@ border-top: 2px solid $primary; }
 /* Table Striped */
 table > tbody > tr:nth-child(odd) > td,
 table > tbody > tr:nth-child(odd) > th {
-color: $000000;
+color: #000000;
 background-color: $primary_bg; }
 
 /* Table Hover */
