--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -338,7 +338,7 @@ color: $primary; }
 .wg-hero.dark .btn:active,
 .wg-hero.dark .btn:focus,
 .wg-hero.dark .btn:hover {
-color: #fffff8; }  
+color: $red; }  
 
 /*************************************************
  *  About widget
