--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -733,6 +733,7 @@ applause-button {
   margin: 0 auto;
   background-color: $primary_bg;
   color: #000000;
+  border-top: 3px solid $primary;
 }
 
 #popup-index {
