--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -724,7 +724,7 @@ applause-button {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: $primary_bg;
+  background-color: #fffff8;
 }
 
 .popup-wrapper {
