--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -729,7 +729,7 @@ applause-button {
 
 .popup-wrapper {
   display: none;
-  max-width: 90%;
+  max-width: 38rem;
   margin: 0 auto;
   background-color: $primary_bg;
   color: #000000;
@@ -751,7 +751,7 @@ applause-button {
 }
 
 #popup-content {
-  max-width: 40%;
+  max-width: 36rem;
   text-align: left;
   padding: 1.25rem 0 1.25rem 0.9rem;
 }
