--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -729,7 +729,7 @@ applause-button {
 
 .popup-wrapper {
   display: none;
-  max-width: 38rem;
+  max-width: 100vw;
   margin: 0 auto;
   background-color: $primary_bg;
   color: #000000;
