--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -731,8 +731,8 @@ applause-button {
   display: none;
   max-width: 100vw;
   margin: 0 auto;
-  background-color: $primary_bg;
-  color: #000000;
+  background-color: #fffff8;
+  color: #111111;
   border-top: 3px solid $primary;
 }
 
