--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -747,7 +747,7 @@ applause-button {
 }
 
 #popup-close:hover {
-  background-color: $primary_bg;
+  background-color: #fffff8;
 }
 
 #popup-content {
