--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -729,7 +729,7 @@ applause-button {
 
 .popup-wrapper {
   display: none;
-  max-width: 100vw;
+  max-width: 760px;
   margin: 0 auto;
   background-color: #fffff8;
   color: #111111;
@@ -751,7 +751,7 @@ applause-button {
 }
 
 #popup-content {
-  max-width: 90vw;
+  max-width: 720px;
   text-align: left;
   padding: 1.25rem 0 1.25rem 0.9rem;
 }
