--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -751,7 +751,7 @@ applause-button {
 }
 
 #popup-content {
-  max-width: 720px;
+  max-width: 90vw;
   text-align: left;
   padding: 1.25rem 0 1.25rem 0.9rem;
 }
