site_footer.html

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -22,7 +22,7 @@
     {{ end }}
 
   <p class="powered-by">
-    Funcionando con <a href="https://github.com/rodrigoalcarazdelaosa/rodrigoalcarazdelaosa.me" target="_blank" rel="noopener"><i class="fab fa-github"></i></a> y el
+    Funcionando con <a href="https://github.com/rodrigoalcarazdelaosa/rodrigoalcarazdelaosa.me" target="_blank" rel="noopener"><i class="fab fa-github mr-1"></i></a> y el
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">tema Academic</a> para
     <a href="https://gohugo.io" target="_blank" rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-width="27" aria-label="Logo" height="0.75rem" viewBox="0 0 1493 391">
   <path fill="#ebb951" stroke="#fcd804" d="M1345.211 24.704l112.262 64.305a43 43 0 0 1 21.627 37.312v142.237a40 40 0 0 1-20.702 35.037l-120.886 66.584a42 42 0 0 1-41.216-.389l-106.242-61.155a57 57 0 0 1-28.564-49.4V138.71a64 64 0 0 1 31.172-54.939l98.01-58.564a54 54 0 0 1 54.54-.503z"/>
