--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -736,7 +736,7 @@ applause-button {
 
 .popup-wrapper {
   display: none;
-  max-width: 100vw;
+  max-width: 720px;
   margin: 0 auto;
   background-color: #fffff8;
   color: #111111;
