--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -754,7 +754,7 @@ applause-button {
 }
 
 #popup-close:hover {
-  background-color: #fffff8;
+  background-color: $primary_bg;
 }
 
 #popup-content {
